# APO-semestral

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  my_const.h  my_knobs.cpp  my_knobs.h  my_painter.cpp  my_painter.h  mzapo_parlcd.c  mzapo_parlcd.h  mzapo_phys.c  mzapo_phys.h
